# CloudMusic

./: .gitignore  AUDIO_INTEGRATION_COMPLETE.md  AUDIO_INTEGRATION_SUMMARY.md  AUTOMOTIVE_QT_SKILLS.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  CMakeLists_new.txt  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  Main.qml  MyBottomRect.qml  MyLeftBottomRect.qml  MyLeftRect.qml  MyRightBottomRect.qml  MyRightRect.qml  MyRightTopRect.qml  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  README_PACKAGING.md  WINDOWS_FIX.md  WINDOW_CLOSE_FIX.md  check_linux_audio.sh  install_qt_multimedia.sh  main.cpp  music.md  package.sh  setup-git-ubuntu.sh  sync-to-vm.sh  verify-resources-windows.bat  左侧菜单UI更新说明.md  播放列表抽屉功能说明.md
config/: app.config.example
docs/: CLION_QML_SETUP.md  CROSS_PLATFORM_NOTES.md  DEBUGGING_GUIDE.md  DEBUGGING_SUMMARY.md  DEBUG_CHEATSHEET.md  ICON_GUIDE.md  PERFORMANCE_ANALYSIS.md  QTCREATOR_SETUP.md  README.md  UBUNTU_TESTING.md
docs/archive/: CLEANUP_SUMMARY.md  CODE_MIGRATION_COMPLETED.md  MIGRATION_COMPLETED.md  MIGRATION_GUIDE.md  RESOURCES_MIGRATION.md  STARTUP_FIX.md  WARNINGS_FIXED.md
docs/development/: CPP_LEARNING_ROADMAP.md  CPP_LEARNING_ROADMAP_嵌入式Qt车载.md  Linux音频配置.md  嵌入式Qt车载开发_工作频率标注.md  音频功能集成说明.md
resources/qml/bottompage/: MyBottomRect.qml
resources/qml/leftpage/: MyLeftRect.qml  MyLeftTopRect.qml
resources/qml/righpage/: MyRightRect.qml
resources/qml/src/: Main.qml
resources/qml/src/bottompage/: MyBottomRect.qml
resources/qml/src/bottompage/components/: ControlButton.qml  PlayButton.qml  PlaylistDrawer.qml  SongInfo.qml
resources/qml/src/commonui/: MyWindowRect.qml
resources/qml/src/leftpage/: MyLeftBottomRect.qml  MyLeftRect.qml  MyLeftTopRect.qml
resources/qml/src/leftpage/components/: MenuItem.qml  SectionHeader.qml
resources/qml/src/righpage/: AudioBookCard.qml  BannerSwiper.qml  MyControl.qml  MyRightBottomRect.qml  MyRightRect.qml  MyRightTopRect.qml  SongListCard.qml
resources/qml/src/righpage/components/songlist/: SongListCard.qml
resources/qml/src/righpage/components/topbar/: LoginPopup.qml  SearchBar.qml
resources/qml/src/righpage/viewmodels/: SearchViewModel.qml
resources/qml/src/viewmodels/: ContentViewModel.qml  MusicPlayerViewModel.qml  qmldir
scripts/: build.sh  create-dmg.sh  create-icns-from-png.sh  debug.sh  download-qt-docs.sh  profile.sh  quick-debug.sh  remote-debug.sh  run.sh
src/: img.qrc  main.cpp
src/core/: Application.cpp  Application.h  Config.cpp  Config.h  Logger.cpp  Logger.h  Version.h.in
src/ui/: Main.qml
src/ui/bottompage/: MyBottomRect.qml
src/ui/bottompage/components/: ActionButton.qml  AlbumCover.qml  MoreMenu.qml  MoreMenuItem.qml  PlaylistDrawer.qml  ProgressBar.qml  QualityItem.qml  QualityMenu.qml
src/ui/commonui/: MyImageRect.qml  MyWindowRect.qml
src/ui/leftpage/: MyLeftBottomRect.qml  MyLeftTopRect.qml
src/ui/leftpage/components/: Divider.qml
src/ui/righpage/: MyRightBottomRect.qml  MyRightTopRect.qml
src/ui/righpage/components/audiobook/: AudioBookCard.qml
src/ui/righpage/components/bannerswiper/: BannerSwiper.qml
src/ui/righpage/components/topbar/: HotSearchPopup.qml  IconButton.qml  LoginPopup.qml  RankingCard.qml  SearchBar.qml  SearchSuggestionPopup.qml  TextButton.qml  WindowControl.qml  qmldir
src/ui/theme/: Theme.qml
src/ui/viewmodels/: ContentViewModel.qml  MusicPlayerViewModel.qml  SearchViewModel.qml  qmldir
